[metadata]
name = pyk8s-controller
author = Ryan Belgrave
author-email = rmb1993@gmail.com
summary = A Kubernetes Controller Framework for Python
description-file = README.rst
home-page = https://github.com/rmb938/pyk8s-controller
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[files]
packages =
    k8scontroller

[pbr]
skip_authors = 1
skip_changelog = 1